hard-gists/5544803/run.log
=== Docker Run Log for 5544803 ===
Started at: Mi 29. Okt 15:45:16 CET 2025

[2025-10-29 15:45:16] START: Running container for 5544803
[2025-10-29 15:45:16] SUCCESS: Container 15c5386cd4f3bab6010f088320d674d38a169c475e530e9be1c241e6af5c39e3 started for 5544803
=== Container logs for 5544803 ===
  File "/snippet.py", line 454
    print 'Scikit silhouette (%fs): %f' % (t, s)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5544803 ===
[2025-10-29 15:45:18] INFO: Container 15c5386cd4f3bab6010f088320d674d38a169c475e530e9be1c241e6af5c39e3 has stopped
